# auth.pico

./: README.md  specification.md
.github/workflows/: notion_bridge.yml
python/: ap-auth.py
rust/ap-auth-sign/: Cargo.toml  README.md
rust/ap-auth-sign-reqwest/: Cargo.toml  README.md
rust/ap-auth-sign-reqwest/src/: lib.rs
rust/ap-auth-sign/src/: lib.rs
rust/ap-auth-verify/: Cargo.toml
rust/ap-auth-verify/src/: header.rs  lib.rs
