[package]
name = "ap-auth-sign-reqwest"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest-middleware = "0.2"
async-trait = "0.1"
task-local-extensions = "0.1"
reqwest = "0.11"
ap-auth-sign = { path = "../ap-auth-sign" }
ed25519-dalek = "2.0"
anyhow = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
